Added some extra tags

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
             <h2>El padre</h2>
 
                 <p>
-                    El padre de la Web, Tim Berners-Lee, es también el padre de del lenguaje HTML.
+                    El padre de la Web, <strong>Tim Berners-Lee</strong>, es también el padre de del lenguaje HTML.
                 </p>
             <h2>
                 La Estandarización
             </h2>
 
                 <p>
-                    El lenguaje HTML está estandarizado por el w3c, el World Wide Web Consortium.
+                    El lenguaje HTML está estandarizado por el w3c, <em>el World Wide Web Consortium</em>.
                 </p>
 
     </body>
