--- a/index.html
+++ b/index.html
@@ -14,15 +14,16 @@
             <h2>El padre</h2>
 
                 <p>
-                    El padre de la Web, <strong>Tim Berners-Lee</strong>, es también el padre de del lenguaje HTML.
-                </p>
-            <h2>
-                La Estandarización
-            </h2>
+                    El padre de la Web, <strong>Tim Berners-Lee</strong>, es también el padre de del lenguaje HTML
+                    , <em> Hypertext MarkUp Language</em>.</p>
 
-                <p>
-                    El lenguaje HTML está estandarizado por el w3c, <em>el World Wide Web Consortium</em>.
-                </p>
+                <h2>La Estandarización</h2>
+
+                    <p>El lenguaje HTML está estandarizado por el w3c, <em>el World Wide Web Consortium</em>.</p>
+
+                    <p>La versión actual de HTML es la 5, aunque no está completada.</p>
+
+                    <p> Se espera que esté terminada en el  <strong> año 2014</strong></p>
 
     </body>
         
