Agregados elementos el fomulario

--- a/ejemplo_formulario_html5.html
+++ b/ejemplo_formulario_html5.html
@@ -12,6 +12,14 @@
     <p>Este es un ejemplo sobre las nuevas características de HTML5 en formularios</p>
 
     <form id="form-order">
+        <p>
+            <label for = "name">Nombre(obligatorio)</label>
+            <input type="text" name = "name" id="name" placeholder="Juan Pérez" 
+            autofocus 
+            autocomplete 
+            required>
+            
+        </p>
         <input type="submit" value="Enviar">
     </form>
 </body>
