Agregado campo pass al formulario

--- a/ejemplo_formulario_html5.html
+++ b/ejemplo_formulario_html5.html
@@ -20,6 +20,14 @@
             required>
             
         </p>
+
+        <p>
+            <label for="passwd">Contraseña obligatoria</label>
+            <input type="password" name="passwd" id="passwd"
+            placeholder= "qwe1234"
+            pattern="[a-zA-Z]{3}[0-9]{4}"
+            required>(La Contraseña debe contener 3 letras y 4 números en este orden)
+        </p>
         <input type="submit" value="Enviar">
     </form>
 </body>
