Agregado campo pass al formulario

--- a/ejemplo_formulario_html5.html
+++ b/ejemplo_formulario_html5.html
@@ -28,6 +28,21 @@
             pattern="[a-zA-Z]{3}[0-9]{4}"
             required>(La Contraseña debe contener 3 letras y 4 números en este orden)
         </p>
+
+        <p>
+            <label for="phone">Telefono</label>
+            <input type="tel" name="phone" id="phone" placeholder="+7965453635">
+        </p>
+
+        <p>
+            <label for="email">Email</label>
+            <input type="email" name="email" id="email" placeholder="ejemplo@email.com">
+        </p>
+
+        <p>
+            <label for="website"> Tu página web</label>
+            <input type="url" name="website" id="website" placeholder="Http://www.tuweb.com">
+        </p>
         <input type="submit" value="Enviar">
     </form>
 </body>
