Agregados más campos de ejemplo

--- a/ejemplo_formulario_html5.html
+++ b/ejemplo_formulario_html5.html
@@ -43,6 +43,16 @@
             <label for="website"> Tu página web</label>
             <input type="url" name="website" id="website" placeholder="Http://www.tuweb.com">
         </p>
+
+        <p>
+            <label for="numberexample">Número de temas</label>
+            <input type="number" name="numberexample" id="numberexample" min="2" max="14" placeholder="2" step="2">(entre 2 y 14, solo pares)
+        </p>
+
+        <p>
+            <label for="deliverydate">Fecha y envío</label>
+            <input type="date" name="deliverydate" id="deliverydate" min="2012-07-16">(mínimo 16 de Julio de 2012)
+        </p>
         <input type="submit" value="Enviar">
     </form>
 </body>
