Agregados campos para color, busqueda y puntos

--- a/ejemplo_formulario_html5.html
+++ b/ejemplo_formulario_html5.html
@@ -53,6 +53,21 @@
             <label for="deliverydate">Fecha y envío</label>
             <input type="date" name="deliverydate" id="deliverydate" min="2012-07-16">(mínimo 16 de Julio de 2012)
         </p>
+
+        <p>
+            <label for="colorexample">Color del item</label>
+            <input type="color" name="colorexample" id="colorexample" value="#1A33F">
+        </p>
+
+        <p>
+            <label for="search">Buscar</label>
+            <input type="search"  name="search" id="search">
+        </p>
+
+        <p>
+            <label for="points">Rango de valores</label>
+            <input type="range" name="points" id="points" min="1" max="10">(entre 1 y 10)
+        </p>
         <input type="submit" value="Enviar">
     </form>
 </body>
