agregado campo prioridad

--- a/ejemplo_formulario_html5.html
+++ b/ejemplo_formulario_html5.html
@@ -69,6 +69,15 @@
             <input type="range" name="points" id="points" min="1" max="10">(entre 1 y 10)
         </p>
         <input type="submit" value="Enviar">
+
+        <p>
+            <fieldset>
+                <legend>Selecciona prioridad</legend>
+                <p><label><input type="radio" name="priority" value="baja" checked>Baja</label></p>
+                <p><label><input type="radio" name="priority" value="media">Media</label></p>
+                <p><label> <input type="radio" name="priority" value="alta">Alta</label></p>
+            </fieldset>
+        </p>
     </form>
 </body>
 
