agregado campo check

--- a/ejemplo_formulario_html5.html
+++ b/ejemplo_formulario_html5.html
@@ -78,6 +78,15 @@
                 <p><label> <input type="radio" name="priority" value="alta">Alta</label></p>
             </fieldset>
         </p>
+
+        <p>
+            <fieldset>
+                <legend>Selecciona el tipo de envio</legend>
+                <p><label> <input type="checkbox" name="deliverytype" value="urgente" checked>Urgente</label></p>
+                <p><label> <input type="checkbox" name="deliverytype" value="acuse">Con acuse de recibo</label></p>
+                <p><label> <input type="checkbox" name="deliverytype" value="reembolso">Contra reembolso</label></p>
+            </fieldset>
+        </p>
     </form>
 </body>
 
