Agregado css mediante etiqueta style, color de font y background

--- a/ejemplo_formulario_html5.html
+++ b/ejemplo_formulario_html5.html
@@ -7,7 +7,7 @@
     <title> Nuevas características de HTML5 en formularios</title>
 </head>
 
-<body>
+<body style="color: #333; background-color: #CCC;">
     <h1>Nuevas características de HTML5 en formularios </h1>
     <p>Este es un ejemplo sobre las nuevas características de HTML5 en formularios</p>
 
