Agregado css mediante etiqueta style, color de font y backgroundy size de letras de las etiquetas h

--- a/ejemplo_formulario_html5.html
+++ b/ejemplo_formulario_html5.html
@@ -8,7 +8,7 @@
 </head>
 
 <body style="color: #333; background-color: #CCC;">
-    <h1>Nuevas características de HTML5 en formularios </h1>
+    <h1 style="font-family: Georgia; font-size:3em;">Nuevas características de HTML5 en formularios </h1>
     <p>Este es un ejemplo sobre las nuevas características de HTML5 en formularios</p>
 
     <form id="form-order">
