--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
     </head>
 
-    <body>
+    <body style="font-family: Georgia; font-size:3em;">
         
-        <h1> Érase una vez HTML</h1>
+        <h1 style="font-family: Georgia; font-size:3em;"> Érase una vez HTML</h1>
         
-            <h2>El padre</h2>
+            <h2 style="font-family: Georgia; font-size:2em;">El padre</h2>
 
                 <p>
                     El padre de la Web, <strong>Tim Berners-Lee</strong>, es también el padre de del lenguaje HTML
