Agregado css mediante etiqueta style, fonts a las etiquetas p

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
         
             <h2 style="font-family: Georgia; font-size:2em;">El padre</h2>
 
-                <p>
+                <p style="font-family: Arial, Helvetica, san-serif">
                     El padre de la Web, <strong>Tim Berners-Lee</strong>, es también el padre de del lenguaje HTML
                     , <em> Hypertext MarkUp Language</em>.</p>
 
-                <h2>La Estandarización</h2>
+                <h2 style="font-family: Georgia; font-size:3em;">La Estandarización</h2>
 
-                    <p>El lenguaje HTML está estandarizado por el w3c, <em>el World Wide Web Consortium</em>.</p>
+                    <p style="font-family: Arial, Helvetica, san-serif">El lenguaje HTML está estandarizado por el w3c, <em>el World Wide Web Consortium</em>.</p>
 
-                    <p>La versión actual de HTML es la 5, aunque no está completada.</p>
+                    <p style="font-family: Arial, Helvetica, san-serif">La versión actual de HTML es la 5, aunque no está completada.</p>
 
-                    <p> Se espera que esté terminada en el  <strong> año 2014</strong></p>
+                    <p style="font-family: Arial, Helvetica, san-serif"> Se espera que esté terminada en el  <strong> año 2014</strong></p>
 
                     <a href="ejemplo_formulario_html5.html">Enlace a formulario html5</a>
 
