--- a/index.html
+++ b/index.html
@@ -4,31 +4,8 @@
     <head>
 
         <meta charset="utf8"/>
-        <style>
-            body{
-                background-color: #CCC;
-                color:#333;
 
-            }
-
-            h1,h2{
-                font-family: Georgia;
-            }
-
-            h1{
-                font-size: 3em;
-
-            }
-
-            h2{
-                font-size: 2em;
-            }
-
-            p{
-                font-family: Arial, Helvetica, sans-serif;
-            }
-        
-        </style>
+        <link rel="stylesheet" href="index.css">
 
         <title>
             Érase una vez HTML
