Agregado css mediante etiqueta link al formulario

--- a/ejemplo_formulario_html5.html
+++ b/ejemplo_formulario_html5.html
@@ -3,6 +3,7 @@
 <html>
 
 <head>
+    <link rel="stylesheet" href="index.css">
     <meta charset="utf-8">
     <title> Nuevas características de HTML5 en formularios</title>
 </head>
