Agregada lista de items para convertir en navbar

--- a/index.html
+++ b/index.html
@@ -16,8 +16,18 @@
     <body >
         
         <h1 > Érase una vez HTML</h1>
+
+
         
             <h2 >El padre</h2>
+
+                <ul>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="historia.html">Historia</a></li>
+                    <li><a href="servicios.html">Servicios</a></li>
+                    <li><a href="contacto.html">About</a></li>
+
+                </ul>
 
                 <p>
                     El padre de la Web, <strong>Tim Berners-Lee</strong>, es también el padre de del lenguaje HTML
