--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         
             <h2 >El padre</h2>
 
-                <ul>
+                <ul class="no-style vertical">
                     <li><a href="index.html">Inicio</a></li>
                     <li><a href="historia.html">Historia</a></li>
                     <li><a href="servicios.html">Servicios</a></li>
