Agregado un ejemplo de encabezado

--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
                     <p> Se espera que esté terminada en el  <strong> año 2014</strong></p>
 
                     <a href="ejemplo_formulario_html5.html">Enlace a formulario html5</a>
+                    
+                    <a href="encabezado.html">Enlace a un encabezado</a>
 
     </body>
         
